Fixed option bar wrapping

--- a/src/style.css
+++ b/src/style.css
@@ -25,16 +25,18 @@ nav {
     width: 100%;
     border-bottom: 2px solid #fff;
     padding-bottom: 36px;
+    white-space: nowrap;
 }
 nav > ul {
     margin: 0;
     padding: 0;
     list-style-type: none;
     position: absolute;
-    right: 50%;
-    float: left;
-    transform: translateX(50%);
+    left: 50%;
+    float: right;
+    transform: translateX(-50%);
     width: 52.3%;
+    inline-size: max-content;
 }
 nav > ul > li {
     float: left;
